# object_localisation_d435

./: Readme  Readme_for_install  Readme_for_use
camera_d435/: CMakeLists.txt  package.xml
camera_d435/description/config/: helper_cam_ref.yaml  helper_miranda_cam.yaml  mir_d435_transform.yaml  panda_d435_transform.yaml
camera_d435/description/launch/: helper_tf.launch  upload_cam_urdf.launch
camera_d435/description/urdf/: camera.urdf.xacro
camera_d435/launch/: camera_common.launch  camera_stream.launch  miranda_camera.launch  panda_camera.launch
camera_d435/scripts/: camera_node.py
camera_d435/src/: static_tf_yaml_parser2.py
camera_d435/srv/: saveFrame.srv
detection_localisation/: CMakeLists.txt  package.xml
detection_localisation/action/: CamDetection.action
detection_localisation/config/: base_cam_transform.yaml  searchPoses.config  searchPoses_old.config
detection_localisation/launch/: DetectionClient.launch  DetectionServer.launch  detectionServer.launch  frameDetection.launch  tf_base_cam.launch
detection_localisation/model/Goesser/18_views10degree/: Goesser15.init  info.txt
detection_localisation/model/Goesser/default/: Goesser.cao
detection_localisation/model/Teabox/11_images/: Teabox.cao  Teabox6.init  Teabox7.init  Teabox9.init
detection_localisation/model/Teabox/2_xml/: Teabox0.init  Teabox1_learning_data.xml
detection_localisation/model/Teabox/2_xml_trainImages/: Teabox1_learning_data.xml
detection_localisation/model/Teabox/Images/: Teabox8.init
detection_localisation/model/Teabox/default/: Teabox.cao
detection_localisation/poses/: poses_circular.yaml  poses_circular_base.yaml  poses_linear.yaml
detection_localisation/src/: ActionClient.cpp  ActionServer.cpp  FrameDetection.cpp
helper/: CMakeLists.txt  package.xml
helper/launch/: calculate_poses.launch  display_images.launch  ps4_controller.launch  publish_marker.launch  publish_markerObject.launch  publish_poses.launch
helper/launch/yaml/: imagesToDisplay.yaml
helper/scripts/: calculate_poses_node.py  publish_poses_node.py  spawn_markerObject.py  spawn_marker_node.py
helper/src/: display_images.cpp
learn_object/: CMakeLists.txt  package.xml  setup.py
learn_object/action/: camera.action
learn_object/config/: cam_2.yaml  cam_base_helper_transform.yaml
learn_object/launch/: calculate_learnposes.launch  camera_bag.launch  learn_keypoints.launch  pose_teacher.launch  pose_teacher_hardware.launch  pose_teacher_simulation.launch  publish_poses.launch  take_learnphotos.launch
learn_object/model/: DetectionDataLog.txt  Goesser1.init  NumberKeypoints.txt
learn_object/model/Goesser/: Goesser1.0.pos  Goesser2.0.pos  Goesser3.0.pos  Goesser4.0.pos
learn_object/model/GoesserKOSuntenMitte/: Goesser8.init
learn_object/model/Goesser_16_55_/: Goesser1.0.pos  Goesser10.0.pos  Goesser11.0.pos  Goesser12.0.pos  Goesser13.0.pos  Goesser14.0.pos  Goesser15.0.pos  Goesser16.0.pos  Goesser17.0.pos  Goesser18.0.pos  Goesser19.0.pos  Goesser2.0.pos  Goesser20.0.pos  Goesser21.0.pos  Goesser22.0.pos  Goesser23.0.pos  Goesser24.0.pos  Goesser25.0.pos  Goesser26.0.pos  Goesser27.0.pos  Goesser28.0.pos  Goesser29.0.pos  Goesser3.0.pos  Goesser30.0.pos  Goesser31.0.pos  Goesser32.0.pos  Goesser33.0.pos  Goesser34.0.pos  Goesser35.0.pos  Goesser36.0.pos  Goesser37.0.pos  Goesser4.0.pos  Goesser5.0.pos  Goesser6.0.pos  Goesser7.0.pos  Goesser8.0.pos  Goesser9.0.pos  NumberKeypoints.txt  poses_circular.yaml  poses_circular_base.yaml
learn_object/model/Goesser_20_55_/: Goesser1.0.pos  Goesser10.0.pos  Goesser11.0.pos  Goesser12.0.pos  Goesser13.0.pos  Goesser14.0.pos  Goesser15.0.pos  Goesser16.0.pos  Goesser17.0.pos  Goesser18.0.pos  Goesser19.0.pos  Goesser2.0.pos  Goesser20.0.pos  Goesser21.0.pos  Goesser22.0.pos  Goesser23.0.pos  Goesser24.0.pos  Goesser25.0.pos  Goesser26.0.pos  Goesser27.0.pos  Goesser28.0.pos  Goesser29.0.pos  Goesser3.0.pos  Goesser30.0.pos  Goesser31.0.pos  Goesser32.0.pos  Goesser33.0.pos  Goesser34.0.pos  Goesser35.0.pos  Goesser36.0.pos  Goesser37.0.pos  Goesser4.0.pos  Goesser5.0.pos  Goesser6.0.pos  Goesser7.0.pos  Goesser8.0.pos  Goesser9.0.pos  NumberKeypoints.txt  poses_circular.yaml  poses_circular_base.yaml
learn_object/model/Goesser_25_65_/: Goesser1.0.pos  Goesser10.0.pos  Goesser11.0.pos  Goesser12.0.pos  Goesser2.0.pos  Goesser3.0.pos  Goesser4.0.pos  Goesser5.0.pos  Goesser6.0.pos  Goesser7.0.pos  Goesser8.0.pos  Goesser9.0.pos  NumberKeypoints.txt  poses_circular.yaml  poses_circular_base.yaml  poses_linear.yaml
learn_object/model/Goesser_25_65_newH/: Goesser.cao  Goesser1.0.pos  Goesser10.0.pos  Goesser11.0.pos  Goesser12.0.pos  Goesser2.0.pos  Goesser3.0.pos  Goesser4.0.pos  Goesser5.0.pos  Goesser6.0.pos  Goesser7.0.pos  Goesser8.0.pos  Goesser9.0.pos  NumberKeypoints.txt  poses_circular.yaml  poses_circular_base.yaml
learn_object/model/Goesser_27/: base_learn_poses.yaml
learn_object/model/Goesser_27_/: base_learn_poses.yaml
learn_object/model/Goesser_27_56_/: Goesser1.0.pos  Goesser10.0.pos  Goesser11.0.pos  Goesser12.0.pos  Goesser2.0.pos  Goesser3.0.pos  Goesser4.0.pos  Goesser5.0.pos  Goesser6.0.pos  Goesser7.0.pos  Goesser8.0.pos  Goesser9.0.pos  NumberKeypoints.txt  (+5 more)
learn_object/msg/: saveFrame.msg
learn_object/poses/: base_learn_poses.yaml  cam_learn_poses.yaml  first_pose.yaml
learn_object/scripts/: calculate_learnposes_node.py  camera_bag_node.py  camera_node.py  publish_poses_node.py  take_learnphotos_node.py  teach_one_pose_node.py
learn_object/src/: learn_keypoints.cpp
(+319 files in other folders)
